--- a/package.json
+++ b/package.json
@@ -6,20 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.0.3",
+    "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.1",
     "styled-normalize": "^8.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.32",
     "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
+    "postcss-styled-syntax": "^0.5.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-clean-order": "^5.2.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-order": "^6.0.3",
     "typescript": "^5"
   }
 }
