--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "styled-components": "^6.1.1",
     "styled-normalize": "^8.1.0"
